# pytch-vm

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: test.yml
doc/: README-developing-docs  pyproject.toml
doc/source/: conf.py  index.rst
doc/source/developer/: actor-registration.rst  actor.rst  attribute-watchers.rst  based-on-skulpt.rst  clones.rst  docstrings.rst  hat-blocks.rst  hit-detection.rst  ide-web-app.rst  index.rst  integration-with-client.rst  overview.rst  physical-computing.rst  rendering.rst  skulpt-pytch-environment.rst  sounds.rst  syscalls.rst  testing.rst  threading-model.rst  tutorials.rst
doc/source/internals/: clones.rst  ide-web-app.rst  index.rst  overview.rst  project.rst  rendering.rst  skulpt-pytch-environment.rst  syscalls.rst  testing.rst  threading-model.rst
doc/source/user/: assets.rst  backdrop-specs.rst  costume-specs.rst  hat-blocks.rst  index.rst  multi-threading.rst  non-hat-blocks.rst  pytch-module-functions.rst  sound-specs.rst  sprite.rst  stage.rst
example/pytch/: boing-tutorial.html  ide.html  index.html  jquery.dropdown.css  jquery.dropdown.licence  pytch-gui.css  pytch-gui.js  pytch-ide.css  run-locally.sh  tutorial-diffs.css
src/: ast.js  compile.js  env.js  import.js  main.js  parser.js  pytchsupport.js  tigerpython-parser.js  tokenize.js
src/lib/: copy.py
support/polyfills/: Unicode.js
support/run/: find-compile-errors.js  require-skulpt.js
test/pytch/: README.md  pytch-testing.js  run-tests.sh  test-rotation.js  (+38 more)
website-layer/: make.sh
(+57 files in other folders)
