[tool.poetry]
name = "pytch-vm-doc"
version = "0.1.0"
description = ""
authors = ["Ben North <ben.north@tcd.ie>"]
readme = "README.md"
packages = [{include = "pytch_vm_doc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
